finished most of it - need to fix speed between transitions of diff. pokemon!

--- a/pokédex.html
+++ b/pokédex.html
@@ -10,18 +10,18 @@
         <h1 id="title">Bits of Good Mid-Semester Project</h1>
         <div class="page">
             <div class="leftSide">
-                <img src="bogimages/ammu.JPG" alt="Pokemon Pic" class = "poke-pic"/>
+                <img src="bogimages/ammu.JPG" alt="Pokemon Pic" id = "poke-pic"/>
                 <div id="poke-name">ditto</div>
                 <div class="below">
                     <h2 id="typeTitle">Types:</h2>
                     <div class="types">
-                        <div id="normal">normal</div>
-                        <div id="other1">normal</div>
-                        <div id="other2">normal</div>
+                        <div id="one">blank</div>
+                        <div id="two">blank</div>
+                        <div id="three">blank</div>
                     </div>
                     <div class="leftButtons">
-                        <div id="leftArrow">&lt</div>
-                        <div id="rightArrow">&gt</div>
+                        <button id="leftArrow">&lt</button>
+                        <button id="rightArrow">&gt</button>
                     </div>
                 </div>
             </div>
@@ -29,8 +29,8 @@
                 <h2 id="infoTitle">Info</h2>
                 <div id="infoCard"></div>
                 <div class="rightButtons">
-                    <div id="infoButton">Info</div>
-                    <div id="movesButton">Moves</div>
+                    <button id="infoButton">Info</button>
+                    <button id="movesButton">Moves</button>
                 </div>
             </div>
         </div>
