done! fixed speed by puttig javascript import at the end of the body!

--- a/pokédex.html
+++ b/pokédex.html
@@ -4,14 +4,13 @@
     <head>
         <title>Pokemon Info!</title>
         <link rel="stylesheet" href="pokéStyles.css">
-        <script src="poké.js" type="text/javascript"></script>
     </head>
     <body>
         <h1 id="title">Bits of Good Mid-Semester Project</h1>
         <div class="page">
             <div class="leftSide">
                 <img src="bogimages/ammu.JPG" alt="Pokemon Pic" id = "poke-pic"/>
-                <div id="poke-name">ditto</div>
+                <div id="poke-name"></div>
                 <div class="below">
                     <h2 id="typeTitle">Types:</h2>
                     <div class="types">
@@ -34,5 +33,6 @@
                 </div>
             </div>
         </div>
+        <script src="poké.js" type="text/javascript"></script>
     </body>
 </html>
