fixed a few misnterpretations of what the project should do! - finally done!

--- a/pokédex.html
+++ b/pokédex.html
@@ -9,7 +9,7 @@
         <h1 id="title">Bits of Good Mid-Semester Project</h1>
         <div class="page">
             <div class="leftSide">
-                <img src="bogimages/ammu.JPG" alt="Pokemon Pic" id = "poke-pic"/>
+                <img src="" alt="Pokemon Pic" id = "poke-pic"/>
                 <div id="poke-name"></div>
                 <div class="below">
                     <h2 id="typeTitle">Types:</h2>
